--- a/login.html
+++ b/login.html
@@ -210,8 +210,19 @@
         });
     })
     .catch(error => {
-      showPopup("Erro ao criar conta: " + error.message, "#C8102E", "❌");
-    });
+  let mensagem = "Erro ao criar conta.";
+  if (error.code === "auth/email-already-in-use") {
+    mensagem = "Este email já está em uso.";
+  } else if (error.code === "auth/invalid-email") {
+    mensagem = "Email inválido. Verifique e tente novamente.";
+  } else if (error.code === "auth/weak-password") {
+    mensagem = "Senha fraca. Crie uma senha mais segura.";
+  } else {
+    mensagem = "Erro ao criar conta: " + error.message;
+  }
+  showPopup(mensagem, "#C8102E", "❌");
+});
+
 }
 
 
