--- a/login.html
+++ b/login.html
@@ -662,7 +662,7 @@ function handleResendVerification() {
   <span id="popupText">Mensagem</span>
 </div>
 <!-- Áudio para erro -->
-<audio id="errorSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
+<audio id="errorSound" src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Windows_Error.wav" preload="auto"></audio>
 
 </body>
 </html>
