--- a/login.html
+++ b/login.html
@@ -368,7 +368,7 @@ function handleResendVerification() {
 
     /* Container dos formulários */
     .container {
-      margin: 80px auto 20px auto; /* Add margin top to account for fixed header */
+  margin: 140px auto 20px auto; /* Aumentamos o topo pra 140px */
       width: 100%;
       max-width: 400px;
       background: var(--color-light);
@@ -662,7 +662,7 @@ function handleResendVerification() {
   <span id="popupText">Mensagem</span>
 </div>
 <!-- Áudio para erro -->
-<audio id="errorSound" src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Windows_Error.wav" preload="auto"></audio>
+<audio id="errorSound" src="https://www.myinstants.com/media/sounds/windows-error-sound.mp3" preload="auto"></audio>
 
 </body>
 </html>
