--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20servico%20em%20placa%20solar" target="_blank">Agendar</a>
         </div>
         <div class="card">
-  <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/lavagem-moto.png" alt="Lavagem de Moto">
-  <h3>Lavagem de Moto</h3>
-  <p>Lavagem completa e detalhada para sua moto brilhar como nova, com produtos de qualidade e atendimento rápido.</p>
-  <a href="https://wa.me/64981226078?text=Oi,%20quero%20agendar%20uma%20lavagem%20de%20moto" target="_blank">💬 Agendar via WhatsApp</a>
+  <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/lavagem-carro.png" alt="Lavagem de Veículo">
+  <h3>Lavagem de Veículo</h3>
+  <p>Lavagem completa para seu carro ou moto, com atenção aos detalhes, qualidade e aquele brilho de novo!</p>
+  <a href="https://wa.me/64981226078?text=Oi,%20quero%20agendar%20uma%20lavagem%20de%20veículo" target="_blank">Agendar</a>
 </div>
       </div>
     </div>
