--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
           <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/placa-solar.png" alt="Placa Solar">
           <h3>Placa Solar</h3>
           <p>Instalação e manutenção de sistemas de energia solar para economizar e contribuir com o meio ambiente.</p>
-          <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20servico%20em%20placa%20solar" target="_blank">Agendar</a>
+          <a href="#" class="agendar-popup" data-servico="Placa Solar">Agendar</a>
         </div>
         <div class="card">
   <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/lavagem-carro.png" alt="Lavagem de Veículo">
